--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Erc1155_example/lib/forge-std"]
 	path = Erc1155_example/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "Erc1155_example/lib/openzeppelin-contracts"]
+	path = Erc1155_example/lib/openzeppelin-contracts
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts
