--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Erc1155_example/lib/openzeppelin-contracts"]
 	path = Erc1155_example/lib/openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "Erc1155_example/lib/openzeppelin-contracts-upgradeable"]
+	path = Erc1155_example/lib/openzeppelin-contracts-upgradeable
+	url = https://github.com/OpenZeppelin/openzeppelin-contracts-upgradeable
